--- a/GenericsClassLibrary/GenericsClassLibrary.csproj
+++ b/GenericsClassLibrary/GenericsClassLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Genre.cs" />
     <Compile Include="Movies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
